--- a/styles/style.css
+++ b/styles/style.css
@@ -72,3 +72,12 @@ section {
 .social-media-buttons a:hover {
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
 }
+
+.section-title{
+    color: var(--color-primary-6);
+    font-size: 1.563rem;
+}
+
+.section-subtitle{
+    font-size: 2.1875rem;
+}
