--- a/styles/menu.css
+++ b/styles/menu.css
@@ -36,4 +36,45 @@
     justify-content: center;
     font-size: 1.563rem;
     color: var(--color-primary-1);
+    width: 70px;
+    height: 70px;
+    right: -10px;
+    top: -10px;
+    border-radius: 0px 37.5px 0px 42.5px;
+}
+
+.dish-description {
+    color: #434343;
+    text-align: center;
+}
+
+.dish-rate i{
+    color: var(--color-primary-6);
+}
+
+.dish-price{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+@media screen and (max-width: 1170px){
+    #dishes {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .dish{
+        width: calc(50% - 12px);
+    }
+}
+
+@media screen and (max-width: 600px){
+    #menu .section-subtitle{
+        text-align: center;
+    }
+
+    .dish{
+        width: 100%
+    }
 }
